--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -16,5 +16,13 @@
     <string name="delete_gf">Cancella l\'area</string>
     <string name="gf_details">Dettagli dell\'area</string>
     <string name="location_proximity_srv">Registra la tua posizione ogni 15 minuti se ti trovi all\'interno di una delle aree configurate</string>
-
+    <string name="home_header">Home</string>
+    <string name="get_keys">Genera le tue chiavi</string>
+    <string name="define_geofences">Crea zone di lavoro</string>
+    <string name="generate_keys">Genera o visualizza le tue chiavi</string>
+    <string name="your_pvt_keys">La tua chiave privata</string>
+    <string name="your_pvt_iv">Il tuo IV privato</string>
+    <string name="save">Salva</string>
+    <string name="generate">Genera</string>
+    <string name="app_settings">Imposta la tua app</string>
 </resources>
